templates mapping to _base.html

--- a/templates/voting/results.html
+++ b/templates/voting/results.html
@@ -1,6 +1,12 @@
+{% extends '_base.html' %}
+
+{% block title %} Elections Results {% endblock %}
+
+{% block content %}
 <h2>Results for {{ election.name }}</h2>
 <ul>
     {% for candidate, votes in results_data.items %}
     <li>{{ candidate }}: {{ votes }} votes</li>
     {% endfor %}
 </ul>
+{% endblock %}
