--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,4 +1,7 @@
 {% extends '_base.html' %}
 
+{% block title %} Profile {% endblock %}
+
 {% block content %}
+<h2>User Profile</h2>
 {% endblock %}
