--- a/templates/voting/already_voted.html
+++ b/templates/voting/already_voted.html
@@ -1,2 +1,6 @@
+{% extends '_base.html' %}
+
+{% block content %}
 <h2>User has already voted in this election</h2>
 <p>Try another election...</p>
+{% endblock %}
