removed resutls from sidebar

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -20,16 +20,10 @@
                   Elections
                 </li>
               </a>
-              <a href="" class="sidebarLink">
-                <li class="sidebarListItem">
-                  <span class="sidebarIcon"></span>
-                  Results
-                </li>
-              </a>
               <a href="{% url 'profile' %}" class="sidebarLink">
                 <li class="sidebarListItem">
                   <span class="sidebarIcon"></span>
-                  Profile
+                  Accounts Profile
                 </li>
               </a>
               <a class="sidebarLink signout-link" href="{% url 'logout' %}">
