--- a/templates/_base.html
+++ b/templates/_base.html
@@ -15,7 +15,7 @@
             <h3 class="sidebarTitle">Overview</h3>
             <ul class="sidebarList">
               <a href="{% url 'elections' %}" class="sidebarLink">
-                <li class="sidebarListItem active">
+                <li class="sidebarListItem">
                   <span class="sidebarIcon"></span>
                   Elections
                 </li>
@@ -23,7 +23,7 @@
               <a href="{% url 'profile' %}" class="sidebarLink">
                 <li class="sidebarListItem">
                   <span class="sidebarIcon"></span>
-                  Accounts Profile
+                  Profile
                 </li>
               </a>
               <a class="sidebarLink signout-link" href="{% url 'logout' %}">
