--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h2>Voter Registration</h2>
+<h2>Voting Platform | Registration</h2>
 
 <form method="post">
     {% csrf_token %}
