--- a/templates/voting/elections.html
+++ b/templates/voting/elections.html
@@ -4,4 +4,19 @@
 
 {% block content %}
 <h2>Elections</h2>
+
+<div class="election-wrapper">
+    <div class="election-card">
+        <div class="election-img">
+            <img src="" alt="election">
+        </div>
+        <div class="election-details">
+            <h4>Best Programming Language</h4>
+            <h5>Start Date: <span></span></h5>
+            <h5>End Date: <span></span></h5>
+            <p>Status: <span class="status inactive">Already Voted</span></p>
+            <button class="btn">View Results</button>
+        </div>
+    </div>
+</div>
 {% endblock %}
