--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,11 +1,15 @@
 {% extends '_base.html' %}
 
+{% load crispy_forms_tags %} 
+
 {% block title %} Profile {% endblock %}
 
 {% block content %}
 <h2>User Profile</h2>
 
-<form action="" method="post">
-    {{ form.as_p }}
-</form>
+<form action="{% url 'profile' %}" method="post">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-secondary">Update Profile</button>
+ </form>
 {% endblock %}
